--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,13 @@
 <!-- navbar -->
 
-<div class="flex-1 flex-col flex-wrap px-7 md:px-0">
-  <section class="w-full pt-28 px-16 pb-[40%]" id="main">
+<div class="flex-1 flex-col flex-wrap md:px-0 w-full">
+  <section class="w-full pt-36 px-16 pb-[40%]" id="main">
     <div
-      class="container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
+      class="w-full container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
     >
-      <h3 class="font-extrabold text-base md:text-xl text-secondary pt-4 pb-2">
+      <h3
+        class="md:text-center font-extrabold text-base md:text-xl text-secondary pt-4 pb-2"
+      >
         Construction Services
       </h3>
       <hr
@@ -13,7 +15,7 @@
         size="10"
       />
       <h1
-        class="pt-8 w-[100%] md:w-[45%] text-4xl md:text-7xl text-wrap leading-loose h-auto font-extrabold text-secondary text-center md:text-left"
+        class="pt-8 w-[80vw] md:w-[45%] text-4xl md:text-7xl text-wrap leading-tight md:leading-normal h-auto font-extrabold text-secondary text-center md:text-left"
       >
         Building Your Dreams
       </h1>
@@ -24,9 +26,9 @@
       </button>
     </div>
     <div
-      class="absolute bg-[#ffffff] grid grid-cols-1 md:gap-0 md:grid-cols-2 lg:grid-cols-3 my-32 md:shadow-lg"
+      class="absolute ml-36 w-[80vw] bg-[#ffffff] grid grid-cols-1 md:gap-0 md:grid-cols-2 lg:grid-cols-3 my-32 md:shadow-lg"
     >
-      <div class="bg-accent w-[400px] min-h-[570px] px-10 py-14 shadow-lg">
+      <div class="bg-accent w-[510px] min-h-[570px] px-10 py-14 shadow-lg">
         <h1 class="text-secondary text-3xl font-extrabold">
           Professional and Reliable Services.
         </h1>
@@ -244,6 +246,7 @@
       </div>
     </div>
   </section>
+  <section class="w-full h-[80vh] bg-accent"></section>
 </div>
 
 <section class="w-full h-full flex mt-[80%]">
