--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,15 @@
+#main1 {
+  background: linear-gradient(
+      to top,
+      rgba(14, 57, 152, 0),
+      rgba(14, 57, 152, 90)
+    ),
+    linear-gradient(to top, rgba(14, 57, 152, 90), rgba(14, 57, 152, 0)),
+    url("../../assets/images/main-back2.jpg");
+  background-color: #0e3998;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 #img1 {
   background: linear-gradient(
       to left,
