--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <div
-  class="h-28 bg-primary md:hidden container mx-auto flex justify-between scroll-py-10 items-center md:px-10 w-full"
+  class="h-20 md:h-28 bg-primary md:hidden flex justify-between scroll-py-10 items-center px-7 sm:px-10 md:px-10 w-[100vw]"
 >
   <img
     src="../../assets/images/main-logo.png"
-    class="border-secondary w-16 hover:scale-110 duration-75 ease-in-out cursor-pointer ml-7"
+    class="border-secondary w-16 hover:scale-110 duration-75 ease-in-out cursor-pointer"
   />
 
   <div
-    class="w-6 hidden mr-7"
+    class="w-6 hidden"
     [style.display]="navClicked ? 'block' : 'none'"
     (click)="navIconChange()"
   >
@@ -21,7 +21,7 @@
   </div>
 
   <div
-    class="w-6 hidden mr-7"
+    class="w-6 hidden"
     [style.display]="navClicked ? 'none' : 'block'"
     (click)="navIconChange()"
   >
@@ -81,7 +81,7 @@
   }
 </div>
 <nav
-  class="absolute top-0 h-28 md:flex w-screen md:px-16 lg:px-28 justify-between items-center hidden bg-[transparent]"
+  class="mx-auto absolute top-0 h-28 md:flex w-screen md:px-16 lg:px-56 justify-between items-center hidden bg-[transparent]"
 >
   <img
     src="../../assets/images/main-logo.png"
