--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,15 +1,8 @@
 <!-- landing Project page -->
-<section
-  class="w-screen px-10 md:px-40 h-screen flex flex-col justify-center items-start"
-  id="main1"
->
-  <hr class="bg-secondary text-secondary h-2 w-[80px] opacity-40" />
-  <h1
-    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
-  >
-    Projects
-  </h1>
-</section>
+<app-landing-page
+  heading="Projects"
+  link="url('../../assets/images/main-back2.jpg')"
+></app-landing-page>
 
 <!-- our Work -->
 <section class="w-full py-28 bg-[white]">
@@ -121,206 +114,4 @@
   </div>
 </section>
 <!-- FOOTER -->
-<footer class="w-full bg-primary">
-  <section class="w-full bg-[#071C4A] h-[1240px] lg:h-[640px] top-[-420px]">
-    <section
-      class="container mx-auto flex flex-col gap-10 md:gap-0 lg:flex-row pt-24"
-    >
-      <div class="basis-1/4 pl-4 md:pl-0">
-        <img src="../../assets/images/main-logo.png" alt="" />
-        <div class="flex flex-col justify-center">
-          <div class="flex justify-start mt-10">
-            <svg
-              class="w-[25px] h-[25px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
-              />
-            </svg>
-            <span class="text-secondary text-xl font-semibold ml-4"
-              >929-242-6868</span
-            >
-          </div>
-          <div class="flex justify-start mt-7">
-            <svg
-              class="w-[25px] h-[25px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
-              />
-            </svg>
-            <span class="text-secondary text-xl font-semibold ml-4"
-              >contact&#64;info.com</span
-            >
-          </div>
-          <div class="flex justify-start mt-7">
-            <svg
-              class="w-[25px] h-[25px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 320 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M16 144a144 144 0 1 1 288 0A144 144 0 1 1 16 144zM160 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96c0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zM128 480l0-162.9c10.4 1.9 21.1 2.9 32 2.9s21.6-1 32-2.9L192 480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
-              />
-            </svg>
-            <span class="text-secondary text-xl w-56 font-semibold ml-4"
-              >123 Fifth Avenue, New York, NY 10160</span
-            >
-          </div>
-        </div>
-      </div>
-      <div class="basis-1/4 pl-4 px-16 mt-10 lg:mt-0">
-        <h1
-          class="text-xl font-extrabold text-secondary my-2"
-          style="z-index: 1"
-        >
-          Our Services
-        </h1>
-        <div id="underLine1" class="w-[100%] h-[25px]"></div>
-
-        <ul class="flex-col justify-evenly items-center">
-          <li
-            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
-          >
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              General Contract</span
-            >
-          </li>
-          <li
-            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
-          >
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              Project Planning</span
-            >
-          </li>
-          <li
-            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
-          >
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              House Refurbishment</span
-            >
-          </li>
-          <li
-            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
-          >
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              Kicten Remodeling</span
-            >
-          </li>
-          <li class="flex justify-start items-center py-2 mb-2">
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              Interior Design</span
-            >
-          </li>
-          <li class="flex justify-start items-center py-2 mb-2">
-            <svg
-              class="w-[15px] h-[15px]"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                fill="#ffbc01"
-                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
-              />
-            </svg>
-            <span class="text-lg font-semibold text-secondary ml-6">
-              House Extension</span
-            >
-          </li>
-        </ul>
-      </div>
-
-      <div class="basis-1 lg:basis-1/2 pr-36 mt-10 lg:mt-0 pl-4">
-        <h1
-          class="text-xl font-extrabold text-secondary my-2"
-          style="z-index: 1"
-        >
-          A Few Words About Us
-        </h1>
-        <div id="underLine1" class="w-[100%] h-[25px]"></div>
-
-        <p class="font-semibold text-secondary mt-0 md:text-base text-xs">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam.
-        </p>
-        <div class="flex gap-3 h-10 md:h-20 mt-8 lg:mt-4">
-          <img src="../../assets/images/button icons/bbb-logo.png" alt="" />
-          <img src="../../assets/images/button icons/houzz-2019.png" alt="" />
-          <img src="../../assets/images/button icons/top-modeller.png" alt="" />
-          <img src="../../assets/images/button icons/yelp-love.png" alt="" />
-        </div>
-      </div>
-    </section>
-    <div
-      class="bg-[#0d2d71] h-[60px] md:h-[100px] md:leading-[60px] text-center w-full text-secondary text-xs md:text-xl mt-[40px] px-10 pt-3"
-    >
-      Copyright © 2024 Construction | Powered by Construction
-    </div>
-  </section>
-</footer>
+<app-footer></app-footer>
