--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,8 @@
 <!-- landing About page -->
-<section
-  class="w-screen px-10 md:px-56 h-[40vh] md:h-[70vh] flex flex-col justify-center"
-  id="main1"
->
-  <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
-  <h1
-    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
-  >
-    Services
-  </h1>
-</section>
+<app-landing-page
+  heading="About"
+  link="url('../../assets/images/main-back1.png')"
+></app-landing-page>
 
 <!-- who we are -->
 <section class="w-full h-[80vh] flex flex-row z-0">
