--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -6,7 +6,7 @@
         rgba(14, 57, 152, 90)
       ),
       linear-gradient(to top, rgba(14, 57, 152, 90), rgba(14, 57, 152, 0)),
-      url("../../assets/images/main-back.jpg");
+      var(--link);
     background-color: #0e3998;
     background-repeat: no-repeat;
     background-size: cover;
