--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,15 +1,8 @@
 <!-- landing page service -->
-<section
-  class="w-screen px-10 md:px-56 h-[40vh] md:h-[80vh] flex flex-col justify-center"
-  id="main1"
->
-  <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
-  <h1
-    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
-  >
-    Services
-  </h1>
-</section>
+<app-landing-page
+  heading="Services"
+  link="url('../../assets/images/main-back2.jpg')"
+></app-landing-page>
 
 <section class="w-full bg-[white] mt-24 z-0">
   <div class="w-[80%] mx-auto flex flex-col justify-center items-center">
