--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer class="w-full bg-primary pt-16 z-0" id="footerBg">
+<footer class="w-full bg-primary pt-10 z-0" id="footerBg">
   <section
-    class="sm:px-5 md:px-36 lg:px-44 py-20 flex flex-col justify-center gap-10 md:gap-10 lg:flex-row pt-24 z-0"
+    class="px-5 sm:px-5 md:px-28 lg:px-36 xl:px-44 py-20 flex flex-col justify-center gap-10 md:gap-20 lg:flex-row pt-20 z-0"
   >
-    <div class="basis-1/4 pl-4 md:pl-0">
+    <div class="md:pl-0">
       <img src="../../assets/images/main-logo.png" alt="" />
       <div class="flex flex-col justify-center">
         <div class="flex justify-start mt-10 items-center">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="basis-[35%] z-0">
+    <div class="z-0">
       <h1 class="text-lg font-extrabold text-secondary my-2 z-20">
         Our Services
       </h1>
@@ -155,7 +155,7 @@
       </ul>
     </div>
 
-    <div class="mt-10 lg:mt-0 pl-4 z-0">
+    <div class="mt-10 lg:mt-0 z-0">
       <h1 class="text-lg font-extrabold text-secondary my-2 z-20">
         A Few Words About Us
       </h1>
@@ -193,9 +193,9 @@
   </section>
 
   <p
-    class="bg-[#071D4C] w-full h-[60px] text-center text-secondary text-xs md:text-base"
+    class="bg-[#071D4C] w-full h-[60px] text-center text-secondary text-xs md:text-base mt-10"
     style="line-height: 60px"
   >
-    Copyright © 2024 Construction | Powered by Construction
+    Copyright by Pratik Kumbhar
   </p>
 </footer>
