--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -8,102 +8,106 @@
   <div class="w-[80%] mx-auto flex flex-col justify-center items-center">
     <h1 class="text-3xl md:text-7xl font-extrabold text-primary">What We Do</h1>
     <hr class="bg-accent text-accent h-2 w-[80px] mt-8 mb-8" />
-    <p class="text-[gray] text-xl w-full md:w-[50%] leading-loose">
+    <p
+      class="text-[gray] font-semibold md:text-sm text-base w-full md:w-[50%] leading-loose"
+    >
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
     </p>
-    <div class="w-full flex flex-wrap flex-row py-12 z-0 gap-14 justify-center">
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+    <div
+      class="w-full flex flex-wrap flex-row pt-16 pb-28 z-0 gap-14 justify-center"
+    >
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
           src="../../assets/images/services/services-01-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           General Contract
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
         </p>
       </div>
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
           src="../../assets/images/services/services-02-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           Project Planning
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
         </p>
       </div>
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
-          src="../../assets/images/services/services-03-free-img.jpg"
+          src="../../assets/images/services/services-01-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           House Refurbishment
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
         </p>
       </div>
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
-          src="../../assets/images/services/services-04-free-img.jpg"
+          src="../../assets/images/services/services-02-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           Kitchen Remodeling
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
         </p>
       </div>
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
-          src="../../assets/images/services/services-05-free-img.jpg"
+          src="../../assets/images/services/services-01-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           Interior Design
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
         </p>
       </div>
-      <div class="w-[400px] flex flex-col gap-4 z-0">
+      <div class="w-[350px] flex flex-col gap-4 z-0">
         <img
-          src="../../assets/images/services/services-06-free-img.jpg"
+          src="../../assets/images/services/services-02-free-img.jpg"
           alt=""
         />
-        <h1 class="text-primary text-3xl font-extrabold z-10">
+        <h1 class="text-primary text-2xl font-extrabold z-10">
           House Extension
         </h1>
-        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <div id="underLine" class="w-[100%] h-[30px] z-0"></div>
         <p
-          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+          class="text-[#808080] text-base leading-loose text-justify relative top-[-5%]"
         >
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore.
@@ -114,102 +118,23 @@
 </section>
 <!-- form -->
 <section
-  class="w-full h-full flex flex-col md:flex-row gap-16 justify-center items-center pt-16"
+  class="w-full h-full flex flex-col md:flex-row gap-20 justify-center items-center pt-16"
   id="main2"
 >
-  <div class="w-[90%] md:w-[30%]">
+  <div class="w-[90%] md:w-[40%] lg:w-[40%] xl:w-[30%]">
     <hr class="bg-secondary text-secondary h-1 md:h-2 w-[80px] opacity-30" />
-    <h1 class="text-4xl lg:text-7xl text-secondary font-extrabold my-10">
+    <h1 class="text-4xl lg:text-7xl text-[white] font-extrabold my-10">
       Let's Build Your Dreams!
     </h1>
-    <p class="text-secondary text-base md:text-xl text-justify">
+    <p class="text-[#ffffffb1] text-sm md:text-base text-justify">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolorem,
       hic eaque, doloribus vero provident modi nulla maiores pariatur explicabo
       recusandae mollitia assumenda, vel impedit ea magni fugit aut ab.
     </p>
   </div>
 
-  <div class="w-[90%] md:w-[30%] py-24">
-    <form class="bg-secondary p-10" (submit)="sendEmail($event)">
-      <div class="flex flex-row gap-7">
-        <div class="flex flex-col w-[45%] md:w-1/2">
-          <div class="flex items-center">
-            <label for="" class="text-[#808080e3] text-base font-semibold"
-              >Name</label
-            ><span class="text-[red] ml-1">*</span>
-          </div>
-
-          <input
-            type="text"
-            required
-            name="firstname"
-            class="bg-[#80808013] border h-12 px-4"
-            style="border-color: rgba(128, 128, 128, 0.834)"
-          />
-
-          <label class="text-[#808080e3] text-base font-semibold" for=""
-            >First</label
-          >
-        </div>
-        <div class="flex flex-col w-[45%] md:w-1/2">
-          <div class="flex items-center">
-            <label
-              for=""
-              class="text-[#808080e3] text-base opacity-0 font-semibold"
-              >Last</label
-            ><span class="text-[red] ml-1 opacity-0">*</span>
-          </div>
-
-          <input
-            type="text"
-            required
-            name="lastname"
-            class="bg-[#80808013] border h-12 px-4"
-            style="border-color: rgba(128, 128, 128, 0.834)"
-          />
-
-          <label class="text-[#808080e3] text-base font-semibold" for=""
-            >Last</label
-          >
-        </div>
-      </div>
-
-      <div class="flex flex-col mt-5">
-        <div class="flex items-center">
-          <label for="" class="text-[#808080e3] text-base font-semibold"
-            >Email </label
-          ><span class="text-[red] ml-1">*</span>
-        </div>
-
-        <input
-          type="email"
-          name="email"
-          required
-          class="bg-[#80808013] border h-12 px-4"
-          style="border-color: rgba(128, 128, 128, 0.834)"
-        />
-      </div>
-      <div class="flex flex-col mt-5">
-        <div class="flex items-center">
-          <label for="" class="text-[#808080e3] text-base font-semibold"
-            >Comment or Message </label
-          ><span class="text-[red] ml-1">*</span>
-        </div>
-
-        <textarea
-          name="message"
-          id=""
-          class="bg-[#80808013] border h-36 px-2 py-2"
-          style="border-color: rgba(128, 128, 128, 0.834)"
-        ></textarea>
-      </div>
-      <button
-        type="submit"
-        class="w-52 h-14 mt-4 font-semibold text-lg bg-accent text-secondary"
-      >
-        SUBMIT
-      </button>
-    </form>
+  <div class="w-[90%] md:w-[40%] lg:w-[40%] py-24 xl:w-[30%]">
+    <app-form></app-form>
   </div>
 </section>
 <!-- footer -->
