--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<section class="w-[100vw]">
+<section class="w-[100vw] flex flex-col justify-center items-center">
   <app-navbar></app-navbar>
 </section>
