--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,12 +1,14 @@
 <section
-  class="w-screen px-10 md:px-56 h-[40vh] md:h-[70vh] flex flex-col justify-center"
+  class="w-[100%] px-10 h-[40vh] md:h-[70vh] flex flex-col justify-center items-center"
   id="main"
   [style.--link]="link"
 >
-  <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
-  <h1
-    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
-  >
-    {{ heading }}
-  </h1>
+  <div class="w-[100%] md:w-[70%] px-10">
+    <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
+    <h1
+      class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
+    >
+      {{ heading }}
+    </h1>
+  </div>
 </section>
