--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,15 +1,15 @@
 <!-- landing -->
 <app-landing-page
-  heading="Service"
+  heading="Contact"
   link="url('../../assets/images/main-back.jpg')"
 ></app-landing-page>
 <!-- contact form -->
 <section
-  class="w-full md:h-3/4 flex flex-col md:flex-row gap-16 justify-center items-center pt-2 md:pt5 lg:pt-16 mt-24 md:mt-5"
+  class="w-full flex flex-col lg:flex-row gap-16 justify-center items-center lg:items-start pt-2 md:pt5 lg:pt-16 mt-24 md:mt-5"
   id="main2"
 >
-  <div class="w-[70%] md:w-[30%]">
-    <h1 class="pl-10 text-3xl font-extrabold text-primary">Get in Touch</h1>
+  <div class="w-[70%] md:w-[40%]">
+    <h1 class="pl-10 text-4xl font-extrabold text-primary">Get in Touch</h1>
     <hr class="bg-accent text-accent h-1.5 w-[80px] ml-10 mt-3" />
     <div class="flex flex-col mt-10">
       <h3 class="ml-10 text-mygray text-base opacity-50 font-extrabold">
@@ -91,89 +91,10 @@
       <hr class="bg-mygray text-mygray opacity-30 h-1.5 w-[40px] ml-10 mt-3" />
     </div>
   </div>
-  <div class="w-[70%] md:w-[30%]">
-    <h1 class="pl-10 text-4xl font-extrabold text-primary">Message Us</h1>
-    <hr class="bg-accent text-accent h-1.5 w-[80px] ml-10 mt-3" />
-    <form class="bg-[white] p-10" (submit)="sendEmail($event)">
-      <div class="flex flex-row gap-7">
-        <div class="flex flex-col w-[45%] md:w-1/2">
-          <div class="flex items-center">
-            <label for="" class="text-[#808080e3] text-base font-semibold"
-              >Name</label
-            ><span class="text-[red] ml-1">*</span>
-          </div>
-
-          <input
-            type="text"
-            required
-            name="firstname"
-            class="bg-[#80808013] border h-12 px-4"
-            style="border-color: rgba(128, 128, 128, 0.834)"
-          />
-
-          <label class="text-[#808080e3] text-base font-semibold" for=""
-            >First</label
-          >
-        </div>
-        <div class="flex flex-col w-[45%] md:w-1/2">
-          <div class="flex items-center">
-            <label
-              for=""
-              class="text-[#808080e3] text-base opacity-0 font-semibold"
-              >Last</label
-            ><span class="text-[red] ml-1 opacity-0">*</span>
-          </div>
-
-          <input
-            type="text"
-            required
-            name="lastname"
-            class="bg-[#80808013] border h-12 px-4"
-            style="border-color: rgba(128, 128, 128, 0.834)"
-          />
-
-          <label class="text-[#808080e3] text-base font-semibold" for=""
-            >Last</label
-          >
-        </div>
-      </div>
-
-      <div class="flex flex-col mt-5">
-        <div class="flex items-center">
-          <label for="" class="text-[#808080e3] text-base font-semibold"
-            >Email </label
-          ><span class="text-[red] ml-1">*</span>
-        </div>
-
-        <input
-          type="email"
-          name="email"
-          required
-          class="bg-[#80808013] border h-12 px-4"
-          style="border-color: rgba(128, 128, 128, 0.834)"
-        />
-      </div>
-      <div class="flex flex-col mt-5">
-        <div class="flex items-center">
-          <label for="" class="text-[#808080e3] text-base font-semibold"
-            >Comment or Message </label
-          ><span class="text-[red] ml-1">*</span>
-        </div>
-
-        <textarea
-          name="message"
-          id=""
-          class="bg-[#80808013] border h-36 px-2 py-2"
-          style="border-color: rgba(128, 128, 128, 0.834)"
-        ></textarea>
-      </div>
-      <button
-        type="submit"
-        class="w-52 h-14 mt-4 font-semibold text-lg bg-accent text-secondary"
-      >
-        SUBMIT
-      </button>
-    </form>
+  <div class="w-[70%] md:w-[30%] flex flex-col lg:items-center">
+    <h1 class="lg:pl-10 text-4xl font-extrabold text-primary">Message Us</h1>
+    <hr class="bg-accent text-accent h-1.5 w-[80px] lg:ml-10 mt-3" />
+    <app-form background="white"></app-form>
   </div>
 </section>
 <!-- map -->
