--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,9 +1,9 @@
 <section
-  class="w-[100%] px-10 h-[40vh] md:h-[70vh] flex flex-col justify-center items-center"
+  class="w-[100%] px-5 pt-10 h-[40vh] md:h-[70vh] flex flex-col justify-center items-center"
   id="main"
   [style.--link]="link"
 >
-  <div class="w-[100%] md:w-[70%] px-10">
+  <div class="w-[100%] xl:w-[75%] flex flex-col justify-center items-start">
     <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
     <h1
       class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
