--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,12 +6,12 @@
 
 <!-- our Work -->
 <section class="w-full py-28 bg-[white]">
-  <div class="flex flex-col md:flex-row container w-[80%] mx-auto gap-5">
+  <div class="flex flex-col md:flex-row container w-[75%] mx-auto gap-5">
     <div class="w-[100%] md:w-[50%]">
       <h1 class="text-5xl font-extrabold text-primary">Our Work</h1>
       <hr class="bg-accent h-2 w-20 text-accent my-5 ml-2" />
       <img
-        class="h-[85%] w-[100%]"
+        class="h-[35%] md:h-[50%] xl:h-[85%] w-[100%]"
         src="../../assets/images/gallary/project2.jpg"
         alt=""
       />
@@ -39,9 +39,9 @@
 </section>
 
 <!-- image scroller -->
-<section class="bg-accent w-full h-1/4 flex justify-center items-center">
+<section class="bg-accent w-full h-[30vh] flex justify-center items-center">
   <div
-    class="w-2/3 md:w-2/3 flex h-[50%] md:h-[90%] my-auto container mx-auto overflow-scroll"
+    class="w-[90%] md:w-2/3 flex h-[75%] md:h-[100%] my-auto container mx-auto overflow-scroll"
     id="scroller"
   >
     <img src="../../assets/images/scroll images/logo-01-free-img.png" alt="" />
@@ -55,9 +55,11 @@
 
 <!-- our on going projects -->
 <section
-  class="w-full h-[80%] gap-5 bg-[white] flex flex-row justify-center items-center"
+  class="w-full gap-5 grid md:grid-cols-2 xl:flex xl:justify-center bg-[white] px-7 py-14 lg:py-36"
 >
-  <div class="w-[25%] flex flex-col justify-center items-start">
+  <div
+    class="w-[100%] xl:w-[25%] flex flex-col justify-center items-start md:col-span-2"
+  >
     <h1 class="text-7xl font-extrabold text-primary w-[25%] leading-snug">
       Our Ongoing Projects
     </h1>
@@ -66,7 +68,7 @@
       size="10"
     />
   </div>
-  <div class="w-[25%] flex flex-col justify-center items-start">
+  <div class="w-[100%] xl:w-[25%] flex flex-col justify-center items-start">
     <img src="../../assets/images/ongoing1.jpg" alt="" />
     <h1 class="text-2xl font-extrabold text-primary mt-3">Neque aliquet</h1>
     <p class="text-[#808080b7] font-semibold text-base my-3">
@@ -88,7 +90,7 @@
       <span class="text-lg text-primary font-semibold">Know More</span>
     </div>
   </div>
-  <div class="w-[25%] flex flex-col justify-center items-start">
+  <div class="w-[100%] xl:w-[25%] flex flex-col justify-center items-start">
     <img src="../../assets/images/kitchen.jpg" alt="" />
     <h1 class="text-2xl font-extrabold text-primary mt-3">
       Vestibulum eveniet
