--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -134,7 +134,7 @@
   </div>
 
   <div class="w-[90%] md:w-[40%] lg:w-[40%] py-24 xl:w-[30%]">
-    <app-form></app-form>
+    <app-form background="#F3F1F6"></app-form>
   </div>
 </section>
 <!-- footer -->
